[project]
name = "hackerone-cli"
version = "1.0.2"
description = "An unofficial CLI tool for interacting with the HackerOne API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests",
    "python-dotenv",
]

[project.optional-dependencies]
markdown = ["mdv"]

[project.scripts]
hackerone = "hackerone:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]
ignore = [
    "E501",
    "SIM105",
    "B028",
    "E722",
    "B904",
]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
